# rating-workbench

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/mappers/: __init__.py  acme_commercial_package_mapper.py  base.py  mapper_registry.py
backend/app/models/: __init__.py  policy_transaction.py
backend/app/models/custom/: __init__.py  acme_commercial_package.py
backend/app/repositories/: __init__.py  base.py  json_file.py  mongodb.py
backend/app/routes/: __init__.py  acme_commercial_package.py
backend/app/services/: __init__.py  policy_transaction_service.py
frontend/: .dockerignore  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
